# Proyecto-Rust

./: README.md
server/: .env  Cargo.toml
server/migrations/2021-01-31-032239_create_persona/: down.sql  up.sql
server/src/: actix_service.rs  db.rs  dbo_operations.rs  main.rs  model.rs  models.rs  schema.rs  validate.rs  validations.rs  validations2.rs
server/src/utils_validations/: direccion.rs  email.rs  est_civil.rs  fecha_nac.rs  genero.rs  nombre.rs  num_identificacion.rs  telefono.rs
server/tmp/: Prueba1.csv  Prueba2.csv
