[package]
name = "server"
version = "0.1.0"
authors = ["Skairlex <jfponce1@espe.edu.ec>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel={version="1.4.4", features=["postgres","uuid","r2d2"]}
dotenv = "0.15.0"
csv = "1.1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-multipart = "0.3"
actix-web = "3"
futures = "0.3.1"
sanitize-filename = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel_migrations = "1.4.0"
regex = "1"
substring = "1.4.4"
unidecode = "0.3.0"
chrono = "0.4"